Sass middleware added.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
     <head>
         <title>Social Media App </title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" >
-        <!-- <link rel="stylesheet" href="../assets/layout.css"> -->
+        <link rel="stylesheet" href="../assets/css/layout.css">
         <%- style  %>
     </head>
 <body>
