--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,19 +1,66 @@
 <h1>Home</h1>
 
-<section id="posts">
-    <h1>Posts</h1>
-    <form id="new-Post" action="/posts/create" method="post">
-        <textarea name="content" id="" cols="30" rows="3" placeholder="Say Something about todays Activity...."></textarea>
-        <input type="Submit" value="Post">
+
+<section id="feed-posts">
+    <h4>Posts</h4>
+    <% if(locals.user){ %>
+    <form action="/posts/create" id="new-post-form" method="POST">
+        <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
+        <input type="submit" value="Post">
     </form>
-    <div id="post-list-container">
+    <% } %>
+
+    <div id="posts-list-container">
         <ul>
             <% for(post of posts){ %>
-                <li>
+                
+            <li>
+                <p>
+                    <% if (locals.user && locals.user.id == post.user._id){ %>
+                    <small>
+                        <a href="/posts/destroy/<%= post.id %>">X</a>
+                    </small>
+                    <% } %>
                     <%= post.content %>
-                    <small><%= post.user.name%></small> 
-                </li>
-            <% } %>
+                    <br>
+                    <small>
+                        <%= post.user.name %>
+                    </small>
+                </p>
+                <div class="post-comments">
+                    <% if (locals.user){ %>
+                        <form action="/comments/create" method="POST">
+                            <input type="text" name="content" placeholder="Type Here to add comment..." required>
+                            <input type="hidden" name="post" value="<%= post._id %>" >
+                            <input type="submit" value="Add Comment">
+                        </form>
+
+                    <% } %>
+
+                    <div class="post-comments-list">
+                        <ul id="post-comments-<%= post._id %>">
+                            <% for (comment of post.comments){%>
+                                
+                            <p>
+                                <% if (locals.user && locals.user.id == comment.user.id){ %>
+                                <small>
+                                    <a href="/comments/destroy/<%= comment.id %>">X</a>
+                                </small>
+                                <% } %>
+                                <%= comment.content %>
+                                <br>
+                                <small>
+                                    <%= comment.user.name %>
+                                </small>
+                            </p>    
+                            <%} %>
+                        </ul>
+                    </div>
+                </div>
+                
+            </li>
+                
+            <%} %>
         </ul>
     </div>
 </section>
