--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,53 +14,21 @@
         <ul>
             <% for(post of posts){ %>
                 
-            <li>
-                <p>
-                    <% if (locals.user && locals.user.id == post.user._id){ %>
-                    <small>
-                        <a href="/posts/destroy/<%= post.id %>">X</a>
-                    </small>
-                    <% } %>
-                    <%= post.content %>
-                    <br>
-                    <small>
-                        <%= post.user.name %>
-                    </small>
-                </p>
-                <div class="post-comments">
-                    <% if (locals.user){ %>
-                        <form action="/comments/create" method="POST">
-                            <input type="text" name="content" placeholder="Type Here to add comment..." required>
-                            <input type="hidden" name="post" value="<%= post._id %>" >
-                            <input type="submit" value="Add Comment">
-                        </form>
-
-                    <% } %>
-
-                    <div class="post-comments-list">
-                        <ul id="post-comments-<%= post._id %>">
-                            <% for (comment of post.comments){%>
-                                
-                            <p>
-                                <% if (locals.user && locals.user.id == comment.user.id){ %>
-                                <small>
-                                    <a href="/comments/destroy/<%= comment.id %>">X</a>
-                                </small>
-                                <% } %>
-                                <%= comment.content %>
-                                <br>
-                                <small>
-                                    <%= comment.user.name %>
-                                </small>
-                            </p>    
-                            <%} %>
-                        </ul>
-                    </div>
-                </div>
-                
-            </li>
+            <%- include('_post') -%>
                 
             <%} %>
         </ul>
     </div>
+</section>
+
+<section id="user-div">
+    <h4>Users</h4>
+    <% if(locals.user){ %>
+        <% for(user of all_users){%>
+            <p>
+                <a href="/user/profile/<%=user.id%>"> <%= user.name %></a>
+            </p>
+        <% } %>
+    <% } %>
+
 </section>
