--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,19 +2,47 @@
 <html>
     <head>
         <title>Social Media App </title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" >
         <link rel="stylesheet" href="../assets/css/layout.css">
         <%- style  %>
     </head>
 <body>
-    <%- include('header'); %>
+    <%- include('_header'); %>
 
+    
     <div id="main-body" >
         <%- body %>
     </div>
     
 
-    <%- include('footer'); %>
+    <%- include('_footer'); %>
+
+    <script>
+        <% if (flash.success && flash.success.length > 0) {%>
+            new Noty({
+                theme: 'relax',
+                text: "<%= flash.success %>",
+                type: 'success',
+                layout: 'topRight',
+                timeout: 1500
+                
+            }).show();    
+        <%} %>
+
+        <% if (flash.error && flash.error.length > 0) {%>
+            new Noty({
+                theme: 'relax',
+                text: "<%= flash.error %>",
+                type: 'error',
+                layout: 'topRight',
+                timeout: 1500
+                
+            }).show();    
+        <%} %>
+    </script>
+    
 </body>
 </html>
 
