--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,1 +1,16 @@
 <h1>profile</h1>
+
+
+<% if(user.id==profileuser.id) {%>
+    <!-- if user same -->
+    <form action="/user/profileupdate/<%=profileuser.id%>" method="POST">
+        <input type="text" name="name" value="<%=profileuser.name%>" required>
+        <input type="email" name="email" value="<%=profileuser.email%>" placeholder="Email*" required>
+        <input type="submit" value="Update">
+    </form>
+<%}else{%>
+
+    <p><%=profileuser.name %></p>
+    <p> <%= profileuser.email %></p>
+
+<%}%>
