Ajax and Avatar added.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,5 @@
+
+
 <h1>Home</h1>
 
 
@@ -32,3 +34,6 @@
     <% } %>
 
 </section>
+<script src="/Js/home_post.js"></script>
+<!-- importing this script for creating the comments -->
+<script src="/js/home_post_comments.js" ></script>
