--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,8 +4,9 @@
         <title>Social Media App </title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" ></script>
+        <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" >
-        <link rel="stylesheet" href="../assets/css/layout.css">
         <%- style  %>
     </head>
 <body>
@@ -42,7 +43,7 @@
             }).show();    
         <%} %>
     </script>
-    
+    <%- script  %>
 </body>
 </html>
 
