--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,11 +1,13 @@
 <h1>profile</h1>
 
+<img src="<%= user.avatar %>" alt="<%= user.name %>" width="100px" >
 
 <% if(user.id==profileuser.id) {%>
     <!-- if user same -->
-    <form action="/user/profileupdate/<%=profileuser.id%>" method="POST">
+    <form action="/user/profileupdate/<%=profileuser.id%>" enctype="multipart/form-data" method="POST">
         <input type="text" name="name" value="<%=profileuser.name%>" required>
         <input type="email" name="email" value="<%=profileuser.email%>" placeholder="Email*" required>
+        <input type="file" name="avatar" placeholder="Profile Picture">
         <input type="submit" value="Update">
     </form>
 <%}else{%>
